src/objects/shap__c.object
<CustomObject>
    <fields>
        <fullName>Accountname__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountname</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>shaps</relationshipLabel>
        <relationshipName>shaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <formula>width__c  *  length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diameter__c</fullName>
        <label>diameter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>length__c</fullName>
        <label>length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>radius__c</fullName>
        <label>radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shap_id__c</fullName>
        <label>shap-id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shape_location__c</fullName>
        <label>shape-location</label>
        <picklist>
            <picklistValues>
                <fullName>bang</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>width__c</fullName>
        <label>width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>shap</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>shap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>shaps</pluralLabel>
    <recordTypes>
        <fullName>circle</fullName>
        <active>true</active>
        <label>circle</label>
    </recordTypes>
    <recordTypes>
        <fullName>rectangle</fullName>
        <active>true</active>
        <label>rectangle</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>